--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "minicc-kuku",
+  "name": "QuillPedalPi",
   "authors": [
     "Nikolai Plath <der.el.kuku@gmail.com>"
   ],
-  "description": "MiniCC KuKu Manager",
+  "description": "QuillPedalPi",
   "main": "",
-  "license": "MIT",
+  "license": "WTFPL",
   "homepage": "",
   "ignore": [
     "**/.*",
