--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "smoothie": "^1.29.1"
+    "bootstrap": "^3.3",
+    "smoothie": "^1.29",
+    "leaflet": "^1.0"
   }
 }
